namespace java com.abin.lee.thrift.enums

enum OperateType{
ADD=0,
DELETE=1,
UPDATE=3,
FIND=4,
}
